# cpp_struct_to_rust

./: Cargo.toml  VMDK.rs
src/: main.rs
