[package]
name = "cpp_struct_to_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = {version = "2.0.0", features=["clang_6_0"]}
regex = "1.7.1"
lazy_static = "1.4.0"
dunce = "1.0.3"
clap = { version = "4.1.7", features = ["derive"] }
